k8s/ingress/00-ingress.yml
apiVersion: networking.k8s.io/v1 # ingress para redireccionar el trafico en el puerto 80 hacia react o django respectivamente
kind: Ingress
metadata:
  name: ingress
  labels: 
    name: ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - http: # http for local testing
        paths:
          ################
          # URL ROUTING #
          ################
          - path: /DevOps
            backend:
              serviceName: restapi-service
              servicePort: 3000
          - path: /DevOps/token
